--- a/front-spa/package.json
+++ b/front-spa/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.20.35",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-manifest": "^2.3.7",
     "gatsby-plugin-offline": "^3.1.5",
@@ -19,6 +20,7 @@
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.19.0",
     "prettier": "2.0.4"
   },
   "keywords": [
