--- a/front-spa/package.json
+++ b/front-spa/package.json
@@ -19,8 +19,7 @@
     "radium": "^0.26.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0",
-    "react-transition-group": "^4.3.0"
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.19.0",
